--- a/index.html
+++ b/index.html
@@ -1101,12 +1101,12 @@
 
                     <p class="text-white d-flex mb-1">
                         <a href="tel: 8590767228" class="site-footer-link">
-                            8590767228
+                            9995976478
                         </a>
                     </p>
                     <p class="text-white d-flex">
                         <a href="mailto:ASTHRAFEST2K23@GMAIL.COM" class="site-footer-link">
-                            asthrafest2K24@gmail.com
+                            asthrastc2k24@gmail.com
 
                         </a>
                                     
