--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                     ASTHRA 2024
                 </a>
 
-                <a href="#" class="btn custom-btn d-lg-none ms-auto me-4" data-bs-toggle="modal" data-bs-target="#registrationModal">Registration</a>
+                <a href="https://surveyheart.com/form/673cd79635d7a715a76802d4" class="btn custom-btn d-lg-none ms-auto me-4" >Registration</a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
@@ -107,7 +107,7 @@
 
                     </ul>
 
-                    <a href="#" class="btn custom-btn d-lg-block d-none" data-bs-toggle="modal" data-bs-target="#registrationModal">Registration</a>
+                    <a href="https://surveyheart.com/form/673cd79635d7a715a76802d4" class="btn custom-btn d-lg-block d-none" >Registration</a>
                 </div>
             </div>
         </nav>
@@ -484,7 +484,7 @@
                                 <!-- Button trigger modal -->
                                 <button type="button" style="border: 0px;border-radius:20px;" data-bs-toggle="modal"
                                     data-bs-target="#nadanpatt">
-                                    <img src="images\posters\nadanpatt.jpeg" class="artists-image img-fluid">
+                                    <img src="images\posters\exhibition.jpeg" class="artists-image img-fluid">
                                 </button>
                                 <!-- Modal -->
                                 <div class="modal fade" id="nadanpatt" tabindex="-1" role="dialog" aria-hidden="true">
@@ -529,7 +529,7 @@
                                 <!-- Button trigger modal -->
                                 <button type="button" style="border: 0px;border-radius:20px;" data-bs-toggle="modal"
                                     data-bs-target="#motion">
-                                    <img src="images\posters\motion.jpeg" class="artists-image img-fluid">
+                                    <img src="images\posters\fashion.jpeg" class="artists-image img-fluid">
                                 </button>
                                 <!-- Modal -->
                                 <div class="modal fade" id="motion" tabindex="-1" role="dialog" aria-hidden="true">
@@ -1165,7 +1165,7 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <!-- Add this modal HTML just before the closing </body> tag -->
-    <div class="modal fade" id="registrationModal" tabindex="-1" aria-hidden="true">
+    <!-- <div class="modal fade" id="registrationModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content custom-modal">
                 <div class="modal-header border-0">
@@ -1180,7 +1180,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
