--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__zoomIn">
+                                                    <div class="col-md-6 animate__animated animate__rubberBand">
                                                         <img src="images/posters/logic.jpeg" class="img-fluid modal-image" alt="Logic Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__zoomIn">
+                                                    <div class="col-md-6 animate__animated animate__rubberBand">
                                                         <img src="images/posters/logic_guidelines.jpeg" class="img-fluid modal-image" alt="Logic Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -389,10 +389,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__bounceIn">
+                                                    <div class="col-md-6 animate__animated animate__fadeInTopLeft">
                                                         <img src="images/posters/find.jpeg" class="img-fluid modal-image" alt="Find-X Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__bounceIn">
+                                                    <div class="col-md-6 animate__animated animate__fadeInTopRight">
                                                         <img src="images/posters/find_guidelines.jpeg" class="img-fluid modal-image" alt="Find-X Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -428,10 +428,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__bounceIn">
+                                                    <div class="col-md-6 animate__animated animate__flipInX">
                                                         <img src="images/posters/puzzle.jpeg" class="img-fluid modal-image" alt="Decrypto Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__bounceIn">
+                                                    <div class="col-md-6 animate__animated animate__flipInY">
                                                         <img src="images/posters/puzzle_guidelines.jpeg" class="img-fluid modal-image" alt="Decrypto Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -526,16 +526,16 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__fadeIn">
+                                                    <div class="col-md-6 animate__animated animate__zoomInLeft">
                                                         <img src="images/posters/exhibition.jpeg" class="img-fluid modal-image" alt="Exhibition Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__fadeIn">
+                                                    <div class="col-md-6 animate__animated animate__zoomInRight">
                                                         <img src="images/posters/exhibition_guidelines.jpeg" class="img-fluid modal-image" alt="Exhibition Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__fadeIn">
+                                                    <div class="col-md-6 animate__animated animate__zoomIn">
                                                         <img src="images/posters/exhibiiton_guidelines_2.jpeg" class="img-fluid modal-image" alt="Exhibition Guidelines 2" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__fadeIn">
+                                                    <div class="col-md-6 animate__animated animate__zoomIn">
                                                         <img src="images/posters/exhibition_guidelines_3.jpeg" class="img-fluid modal-image" alt="Exhibition Guidelines 3" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -568,7 +568,7 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-12 animate__animated animate__swing">
+                                                    <div class="col-md-12 animate__animated animate__fadeInUpBig">
                                                         <img src="images/posters/fashion.jpeg" class="img-fluid modal-image" alt="Fashion Show Poster" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -601,10 +601,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__slideInUp">
+                                                    <div class="col-md-6 animate__animated animate__lightSpeedInLeft">
                                                         <img src="images/posters/speak.jpeg" class="img-fluid modal-image" alt="Speakathon Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__slideInUp">
+                                                    <div class="col-md-6 animate__animated animate__lightSpeedInRight">
                                                         <img src="images/posters/speak_guidelines.jpeg" class="img-fluid modal-image" alt="Speakathon Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -637,10 +637,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__zoomIn">
+                                                    <div class="col-md-6 animate__animated animate__bounceInLeft">
                                                         <img src="images/posters/quiz.jpeg" class="img-fluid modal-image" alt="Quiz Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__zoomIn">
+                                                    <div class="col-md-6 animate__animated animate__bounceInRight">
                                                         <img src="images/posters/quiz_guidelines.jpeg" class="img-fluid modal-image" alt="Quiz Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -673,10 +673,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__swing">
+                                                    <div class="col-md-6 animate__animated animate__shakeY">
                                                         <img src="images/posters/dance.jpeg" class="img-fluid modal-image" alt="Dance Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__swing">
+                                                    <div class="col-md-6 animate__animated animate__shakeY">
                                                         <img src="images/posters/dance_guidelines.jpeg" class="img-fluid modal-image" alt="Dance Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -709,10 +709,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__pulse">
+                                                    <div class="col-md-6 animate__animated animate__backInLeft">
                                                         <img src="images/posters/e-game.jpeg" class="img-fluid modal-image" alt="E-Gaming Event 1 Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__pulse">
+                                                    <div class="col-md-6 animate__animated animate__backInRight">
                                                         <img src="images/posters/e-game_guidelines.jpeg" class="img-fluid modal-image" alt="E-Gaming Event 1 Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
@@ -745,10 +745,10 @@
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
-                                                    <div class="col-md-6 animate__animated animate__pulse">
+                                                    <div class="col-md-6 animate__animated animate__rotateInDownLeft">
                                                         <img src="images/posters/e-game_2.jpeg" class="img-fluid modal-image" alt="E-Gaming Event 2 Poster" onclick="showImagePopup(this.src)">
                                                     </div>
-                                                    <div class="col-md-6 animate__animated animate__pulse">
+                                                    <div class="col-md-6 animate__animated animate__rotateInDownRight">
                                                         <img src="images/posters/e-game_2_guidelines.jpeg" class="img-fluid modal-image" alt="E-Gaming Event 2 Guidelines" onclick="showImagePopup(this.src)">
                                                     </div>
                                                 </div>
