--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
             <div class="video-wrap">
                 <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                    <source src="video/pexels-2022395.mp4" type="video/mp4">
+                    <source src="video/background.mp4" type="video/mp4">
 
                     Your browser does not support this.
                 </video>
@@ -883,14 +883,14 @@
                         "pageDots": false}'>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <video height="240px" style="border-radius:20px;" controls>
+                                    <video height="240px" style="border-radius:20px;" controls autoplay="autoplay" loop="loop">
                                         <source src="video/video12.mp4" type="video/mp4">
 
                                         Your browser does not support this.
                                     </video>
                                 </div>
                                 <div class="col-md-6">
-                                    <video height="240px" style="border-radius:20px;" controls>
+                                    <video height="240px" style="border-radius:20px;" controls autoplay="autoplay" loop="loop">
                                         <source src="video/video11.mp4" type="video/mp4">
 
                                         Your browser does not support this.
