--- a/index.html
+++ b/index.html
@@ -873,21 +873,20 @@
                 </div>
             </div>
         </section>
-
         <section class="contact-section section-padding" id="Gallery">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-12 mx-auto">
                         <h2 class="text-center mb-4">Gallery</h2>
-                        <div class="video-gallery" data-flickity='{ "wrapAround": true, "pageDots": false }'>
+                        <div class="video-gallery" data-flickity='{ "wrapAround": true, "pageDots": false, "autoPlay": true }'>
                             <div class="gallery-cell">
-                                <video controls>
-                                    <source src="video/video11.mp4" type="video/mp4">
+                                <video controls autoplay>
+                                    <source src="video/video11.mp4" type="video/mp4" >
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
                             <div class="gallery-cell">
-                                <video controls>
+                                <video controls autoplay>
                                     <source src="video/video12.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
