Fixed the sponsors

--- a/index.html
+++ b/index.html
@@ -900,40 +900,14 @@
         <section class="pricing-section section-padding section-bg" id="section_6">
             <div class="container">
                 <div class="row">
-
                     <h2 class="text-center mb-4">Our Sponsors</h2>
-                    <div class="rwo">
-                        <div class="carousel" data-flickity='{  "wrapAround": true , "draggable": true }'>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 200px;" src="images\img-asthra\k1.jpeg"  />
-                                </div>
-                            </div>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 250px;" src="images\img-asthra\top front.png"  />
-                                </div>
-                            </div>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 200px;" src="images\img-asthra\k1.jpeg" />
-                                </div>
-                            </div>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 250px;" src="images\img-asthra\top front.png" />
-                                </div>
-                            </div>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 200px;" src="images\img-asthra\k1.jpeg" />
-                                </div>
-                            </div>
-                            <div>
-                                <div class="carousel-cell"><img style="height: 250px;" src="images\img-asthra\top front.png" />
-                                </div>
-                            </div>
-                           
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <img src="images\img-asthra\sponsors.png" style="height: 200px; margin: auto;" class="img-fluid" />
                         </div>
                     </div>
                 </div>
-            </div> 
-
+            </div>
         </section>
         <section class="contact-section section-padding" id="section_7">
             <div class="container">
