--- a/index.html
+++ b/index.html
@@ -657,8 +657,6 @@
                 </div>
             </div>
         </section>
-
-
         <section class="schedule-section section-padding" id="section_4">
             <div class="container">
                 <div class="row">
@@ -668,10 +666,10 @@
 
                         <ul class="nav schedule-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Day 1</a>
+                                <a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Day 1 (5-12-2024)</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Day 2</a>
+                                <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Day 2 (6-12-2024)</a>
                             </li>
                         </ul>
 
@@ -684,86 +682,43 @@
                                     <div class="col-md-2"><time>9:00 AM</time></div>
                                     <div class="col-md-10">
                                         <h4>Inaugration</h4>
-                                        <p class="bold">Kaviprathiba Hall</p>
+                                        <p class="bold">Kaviprathibha Hall</p>
                                     </div>
                                 </div>
 
                                 <div class="row schedule-item">
-                                    <div class="col-md-2"><time>9:30 AM</time><br class="hide" />
-                                    </div>
+                                    <div class="col-md-2"><time>9:30 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
-                                            </div> -->
-                                        <h4>Prof. M D Paul memorial Intercollegiate-interschool Maths
-                                            Quiz</h4>
+                                        <h4>Prof. M D Paul memorial Intercollegiate-interschool Maths Quiz</h4>
                                         <p class="bold">Menachery Hall</p>
                                     </div>
                                 </div>
                                 <div class="row schedule-item">
-                                    <div class="col-md-2"><time>9:30 AM</time><br class="hide" /></div>
+                                    <div class="col-md-2"><time>10:00 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
-                                            </div> -->
-                                        <h4>πthon</h4>
-                                        <p class="bold">B.Voc Data Science Lab
-                                        </p>
+                                        <h4>Msgr Dr Moothedan Memorial Lecture Series</h4>
+                                        <p class="bold">Kaviprathibha Hall</p>
                                     </div>
                                 </div>
-
                                 <div class="row schedule-item">
                                     <div class="col-md-2"><time>10:00 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
-                                            </div> -->
-                                        <h4>Msgr Dr Moothedan Memorial Lecture Series</h4>
-                                        <p class="bold">Kaviprathiba Hall</p>
-                                    </div>
-                                </div>
-
-
-
-                                <div class="row schedule-item">
-                                    <div class="col-md-2">
-                                        <time>11:00 AM</time><br class="hide" />
-                                    </div>
-                                    <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/4.jpg" alt="Jack Christiansen">
-                                            </div> -->
-                                        <h4>Decrypto Puzzle competition</h4>
-                                        <p class="bold"> AC120
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <div class="row schedule-item">
-                                    <div class="col-md-2">
-                                        <time>10:30 AM</time>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
-                                            </div> -->
-                                        <h4>Log-ic Aptitude competition</h4>
-                                        <p class="bold">AC121
-
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <div class="row schedule-item">
-                                    <div class="col-md-2"><time>10:00 AM</time><br class="hide" />
-                                    </div>
-                                    <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/6.jpg" alt="Willow Trantow">
-                                            </div> -->
                                         <h4>Exhibition</h4>
-                                        <p class="bold">AC 118- AC 119
-                                        </p>
+                                        <p class="bold">AC 118- AC 119</p>
+                                    </div>
+                                </div>
+                                <div class="row schedule-item">
+                                    <div class="col-md-2"><time>10:30 AM</time></div>
+                                    <div class="col-md-10">
+                                        <h4>Log-ic Aptitude competition</h4>
+                                        <p class="bold">AC 121</p>
+                                    </div>
+                                </div>
+                                <div class="row schedule-item">
+                                    <div class="col-md-2"><time>11:00 AM</time></div>
+                                    <div class="col-md-10">
+                                        <h4>Decrypto Puzzle competition</h4>
+                                        <p class="bold">AC 120</p>
                                     </div>
                                 </div>
 
@@ -778,52 +733,37 @@
                                         <time>9:00 AM</time>
                                     </div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/1.jpg" alt="Brenden Legros">
-                                            </div> -->
                                         <h4>Speakathon</h4>
-                                        <p class="bold">Menachery and Haritham hall
-                                        </p>
+                                        <p class="bold">Nalanda Hall (Santhome Athenaeum)</p>
                                     </div>
                                 </div>
 
                                 <div class="row schedule-item">
-                                    <div class="col-md-2"><time>10:00 AM</time>
-                                    </div>
+                                    <div class="col-md-2"><time>9:00 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/2.jpg" alt="Hubert Hirthe">
-                                            </div> -->
-                                        <h4>Find-X </h4>
-                                        <p class="bold">AC 120 – AC 121
-                                        </p>
+                                        <h4>Exhibition(competition)</h4>
+                                        <p class="bold">AC 118- AC 119</p>
                                     </div>
                                 </div>
-
                                 <div class="row schedule-item">
-                                    <div class="col-md-2">
-                                        <time>3:30 PM</time>
-                                    </div>
+                                    <div class="col-md-2"><time>9:15 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/3.jpg" alt="Cole Emmerich">
-                                            </div> -->
-                                        <h4>Rhythmatics</h4>
-                                        <p class="bold">Palocaren square
-                                        </p>
+                                        <h4>Πthon coding</h4>
+                                        <p class="bold">B.Voc Data Science Lab</p>
                                     </div>
                                 </div>
-
                                 <div class="row schedule-item">
-                                    <div class="col-md-2"><time>9:00 AM</time><br class="hide" />
-                                    </div>
+                                    <div class="col-md-2"><time>10:00 AM</time></div>
                                     <div class="col-md-10">
-                                        <!-- <div class="speaker">
-                                                <img src="assets/img/speakers/5.jpg" alt="Alejandrin Littel">
-                                            </div> -->
-                                        <h4>Exhibition(competition) </h4>
-                                        <p class="bold">AC 118- AC 119
-                                        </p>
+                                        <h4>Find X</h4>
+                                        <p class="bold">AC 120 – AC 121</p>
+                                    </div>
+                                </div>
+                                <div class="row schedule-item">
+                                    <div class="col-md-2"><time>3:00 PM</time></div>
+                                    <div class="col-md-10">
+                                        <h4>Fashion Show</h4>
+                                        <p class="bold">Palocaren square</p>
                                     </div>
                                 </div>
                             </div>
